[package]
name = "shadir_walker"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
shasher = {git = "https://github.com/Quin-Darcy/shasher.git", branch = "master"}
tcp_client = {git = "https://github.com/Quin-Darcy/tcp_client.git", branch = "master"}

[profile.dev]
overflow-checks = false

[profile.release]
debug = true
