[package]
name = "encrypter"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
clap = "3"
aes_crypt = {git = "https://github.com/Quin-Darcy/aes_crypt.git", branch = "main"}

[profile.dev]
overflow-checks = false

[profile.release]
debug = true
